--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
             });
             
         </script>
-        <p>Data courtesy of the National UFO Reporting Center (NUFORC)</p>
+        <p class="credit">Data courtesy of the National UFO Reporting Center (NUFORC)</p>
 
     </body>
 </html>
